Assignment solution module3

--- a/index.html
+++ b/index.html
@@ -7,18 +7,82 @@
   <title>Assignment Solution for module-3</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
-  	<nav id="header-nav" class="navbar bavbar-default">
+  	<nav id="header-nav" class="navbar navbar-default">
   	  <div class="container">
-  	    <div class="navbar-header">
-  		  <a href="index.html" class="pull-left"><h1>Food, LLC</h1></a>
-  		</div>
+  	  	<div class="navbar-header">
+  	     
+  	      <div class="navbar-brand">
+  		    <a href="index.html"><h1>Food, LLC</h1></a>
+  		  </div>
+
+  		   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+
+  	    <div id="collapsable-nav" class="collapse navbar-collapse">
+  	      <ul id="nav-list" class="nav navbar-nav navbar-right">
+  	      	<li class="visible-xs">
+  	      	  <a href="#"> Chicken</a>
+  	      	</li>
+  	      	<li class="visible-xs">
+  	      	  <a href="#"> Beef</a>
+  	      	</li>
+  	      	<li class="visible-xs">
+  	      	  <a href="#"> Sushi</a>
+  	      	</li>
+  	      </ul>
+  	    </div>
+
   	  </div>
   	</nav>
+  	<h2 class="text-center">Our Menu</h2>
   </header>
 
+  <div class="container">
+  	<div class="menu-items row">
+  	  <h3 class="text-center">Chicken</h3>
+  	  <div class="col-md-12 col-sm-12 col-xs-12">
+  	    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac auctor quam, a aliquam tortor. Vestibulum id nulla semper, aliquet orci vel, finibus lectus. Vivamus commodo est ac elementum vehicula. Sed tincidunt dolor sed nibh iaculis elementum. Quisque eu tincidunt quam. Praesent consequat id magna sit amet scelerisque. Aliquam feugiat semper commodo. Aliquam eget dolor non tortor tristique posuere.<br>
+        Sed congue mi at augue ultricies, aliquet ullamcorper justo ultrices. Duis vehicula elit et convallis ullamcorper. Aliquam placerat turpis sed augue aliquet viverra. Vivamus at sodales ex. Pellentesque vestibulum lorem mauris, sit amet sollicitudin ligula varius ut. Proin tincidunt ultricies velit ut tempus. Quisque ultrices tortor in lacus malesuada, sed pellentesque lorem finibus. Aenean faucibus, est sit amet elementum malesuada, lectus dolor imperdiet ex, ac rutrum velit turpis vitae velit. Aenean vel lectus in urna tristique varius. Morbi aliquam, erat ac varius dictum, justo lorem mollis dolor, eu iaculis augue est vitae velit. In nec ligula quis est vestibulum lobortis. Quisque pulvinar mi ut arcu ornare, non imperdiet nibh venenatis. Praesent tincidunt odio ante, tincidunt euismod turpis tincidunt nec. Integer ligula nisl, tempor non sem vitae, iaculis efficitur lacus. Mauris nibh leo, congue vitae rhoncus sit amet, efficitur quis elit.<br>
+	    Sed ut diam nec odio vehicula posuere. Donec maximus et augue ut dapibus. Nullam tristique at mauris sed bibendum. Vivamus erat urna, porta imperdiet imperdiet eget, rhoncus id tortor. Integer finibus interdum justo, non pellentesque nisl vulputate in. Sed nec facilisis metus. Nulla pellentesque ex id velit egestas, vulputate iaculis diam sollicitudin. Quisque finibus auctor magna, a hendrerit lorem tincidunt ac.<br>
+	    Sed congue mi at augue ultricies, aliquet ullamcorper justo ultrices. Duis vehicula elit et convallis ullamcorper. Aliquam placerat turpis sed augue aliquet viverra. Vivamus at sodales ex. Pellentesque vestibulum lorem mauris, sit amet sollicitudin ligula varius ut. Proin tincidunt ultricies velit ut tempus. Quisque ultrices tortor in lacus malesuada, sed pellentesque lorem finibus. Aenean faucibus, est sit amet elementum malesuada, lectus dolor imperdiet ex, ac rutrum velit turpis vitae velit. Aenean vel lectus in urna tristique varius. Morbi aliquam, erat ac varius dictum, justo lorem mollis dolor, eu iaculis augue est vitae velit. In nec ligula quis est vestibulum lobortis. Quisque pulvinar mi ut arcu ornare, non imperdiet nibh venenatis. Praesent tincidunt odio ante, tincidunt euismod turpis tincidunt nec. Integer ligula nisl, tempor non sem vitae, iaculis efficitur lacus. Mauris nibh leo, congue vitae rhoncus sit amet, efficitur quis elit.<br>
+	    Sed ut diam nec odio vehicula posuere. Donec maximus et augue ut dapibus. Nullam tristique at mauris sed bibendum. Vivamus erat urna, porta imperdiet imperdiet eget, rhoncus id tortor. Integer finibus interdum justo, non pellentesque nisl vulputate in. Sed nec facilisis metus. Nulla pellentesque ex id velit egestas, vulputate iaculis diam sollicitudin. Quisque finibus auctor magna, a hendrerit lorem tincidunt ac.<br>
+	  </div>
+    </div>
+    <div class="menu-items row">
+  	  <h3 class="text-center">Beef</h3>
+  	  <div class="col-md-12 col-sm-12 col-xs-12">
+  	    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac auctor quam, a aliquam tortor. Vestibulum id nulla semper, aliquet orci vel, finibus lectus. Vivamus commodo est ac elementum vehicula. Sed tincidunt dolor sed nibh iaculis elementum. Quisque eu tincidunt quam. Praesent consequat id magna sit amet scelerisque. Aliquam feugiat semper commodo. Aliquam eget dolor non tortor tristique posuere.<br>
+        Sed congue mi at augue ultricies, aliquet ullamcorper justo ultrices. Duis vehicula elit et convallis ullamcorper. Aliquam placerat turpis sed augue aliquet viverra. Vivamus at sodales ex. Pellentesque vestibulum lorem mauris, sit amet sollicitudin ligula varius ut. Proin tincidunt ultricies velit ut tempus. Quisque ultrices tortor in lacus malesuada, sed pellentesque lorem finibus. Aenean faucibus, est sit amet elementum malesuada, lectus dolor imperdiet ex, ac rutrum velit turpis vitae velit. Aenean vel lectus in urna tristique varius. Morbi aliquam, erat ac varius dictum, justo lorem mollis dolor, eu iaculis augue est vitae velit. In nec ligula quis est vestibulum lobortis. Quisque pulvinar mi ut arcu ornare, non imperdiet nibh venenatis. Praesent tincidunt odio ante, tincidunt euismod turpis tincidunt nec. Integer ligula nisl, tempor non sem vitae, iaculis efficitur lacus. Mauris nibh leo, congue vitae rhoncus sit amet, efficitur quis elit.<br>
+	    Sed ut diam nec odio vehicula posuere. Donec maximus et augue ut dapibus. Nullam tristique at mauris sed bibendum. Vivamus erat urna, porta imperdiet imperdiet eget, rhoncus id tortor. Integer finibus interdum justo, non pellentesque nisl vulputate in. Sed nec facilisis metus. Nulla pellentesque ex id velit egestas, vulputate iaculis diam sollicitudin. Quisque finibus auctor magna, a hendrerit lorem tincidunt ac.<br>
+	    Sed congue mi at augue ultricies, aliquet ullamcorper justo ultrices. Duis vehicula elit et convallis ullamcorper. Aliquam placerat turpis sed augue aliquet viverra. Vivamus at sodales ex. Pellentesque vestibulum lorem mauris, sit amet sollicitudin ligula varius ut. Proin tincidunt ultricies velit ut tempus. Quisque ultrices tortor in lacus malesuada, sed pellentesque lorem finibus. Aenean faucibus, est sit amet elementum malesuada, lectus dolor imperdiet ex, ac rutrum velit turpis vitae velit. Aenean vel lectus in urna tristique varius. Morbi aliquam, erat ac varius dictum, justo lorem mollis dolor, eu iaculis augue est vitae velit. In nec ligula quis est vestibulum lobortis. Quisque pulvinar mi ut arcu ornare, non imperdiet nibh venenatis. Praesent tincidunt odio ante, tincidunt euismod turpis tincidunt nec. Integer ligula nisl, tempor non sem vitae, iaculis efficitur lacus. Mauris nibh leo, congue vitae rhoncus sit amet, efficitur quis elit.<br>
+	    Sed ut diam nec odio vehicula posuere. Donec maximus et augue ut dapibus. Nullam tristique at mauris sed bibendum. Vivamus erat urna, porta imperdiet imperdiet eget, rhoncus id tortor. Integer finibus interdum justo, non pellentesque nisl vulputate in. Sed nec facilisis metus. Nulla pellentesque ex id velit egestas, vulputate iaculis diam sollicitudin. Quisque finibus auctor magna, a hendrerit lorem tincidunt ac.<br>
+	  </div>
+    </div>
+    <div class="menu-items row">
+  	  <h3 class="text-center">Sushi</h3>
+  	  <div class="col-md-12 col-sm-12 col-xs-12">
+  	    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac auctor quam, a aliquam tortor. Vestibulum id nulla semper, aliquet orci vel, finibus lectus. Vivamus commodo est ac elementum vehicula. Sed tincidunt dolor sed nibh iaculis elementum. Quisque eu tincidunt quam. Praesent consequat id magna sit amet scelerisque. Aliquam feugiat semper commodo. Aliquam eget dolor non tortor tristique posuere.<br>
+        Sed congue mi at augue ultricies, aliquet ullamcorper justo ultrices. Duis vehicula elit et convallis ullamcorper. Aliquam placerat turpis sed augue aliquet viverra. Vivamus at sodales ex. Pellentesque vestibulum lorem mauris, sit amet sollicitudin ligula varius ut. Proin tincidunt ultricies velit ut tempus. Quisque ultrices tortor in lacus malesuada, sed pellentesque lorem finibus. Aenean faucibus, est sit amet elementum malesuada, lectus dolor imperdiet ex, ac rutrum velit turpis vitae velit. Aenean vel lectus in urna tristique varius. Morbi aliquam, erat ac varius dictum, justo lorem mollis dolor, eu iaculis augue est vitae velit. In nec ligula quis est vestibulum lobortis. Quisque pulvinar mi ut arcu ornare, non imperdiet nibh venenatis. Praesent tincidunt odio ante, tincidunt euismod turpis tincidunt nec. Integer ligula nisl, tempor non sem vitae, iaculis efficitur lacus. Mauris nibh leo, congue vitae rhoncus sit amet, efficitur quis elit.<br>
+	    Sed ut diam nec odio vehicula posuere. Donec maximus et augue ut dapibus. Nullam tristique at mauris sed bibendum. Vivamus erat urna, porta imperdiet imperdiet eget, rhoncus id tortor. Integer finibus interdum justo, non pellentesque nisl vulputate in. Sed nec facilisis metus. Nulla pellentesque ex id velit egestas, vulputate iaculis diam sollicitudin. Quisque finibus auctor magna, a hendrerit lorem tincidunt ac.<br>
+	    Sed congue mi at augue ultricies, aliquet ullamcorper justo ultrices. Duis vehicula elit et convallis ullamcorper. Aliquam placerat turpis sed augue aliquet viverra. Vivamus at sodales ex. Pellentesque vestibulum lorem mauris, sit amet sollicitudin ligula varius ut. Proin tincidunt ultricies velit ut tempus. Quisque ultrices tortor in lacus malesuada, sed pellentesque lorem finibus. Aenean faucibus, est sit amet elementum malesuada, lectus dolor imperdiet ex, ac rutrum velit turpis vitae velit. Aenean vel lectus in urna tristique varius. Morbi aliquam, erat ac varius dictum, justo lorem mollis dolor, eu iaculis augue est vitae velit. In nec ligula quis est vestibulum lobortis. Quisque pulvinar mi ut arcu ornare, non imperdiet nibh venenatis. Praesent tincidunt odio ante, tincidunt euismod turpis tincidunt nec. Integer ligula nisl, tempor non sem vitae, iaculis efficitur lacus. Mauris nibh leo, congue vitae rhoncus sit amet, efficitur quis elit.<br>
+	    Sed ut diam nec odio vehicula posuere. Donec maximus et augue ut dapibus. Nullam tristique at mauris sed bibendum. Vivamus erat urna, porta imperdiet imperdiet eget, rhoncus id tortor. Integer finibus interdum justo, non pellentesque nisl vulputate in. Sed nec facilisis metus. Nulla pellentesque ex id velit egestas, vulputate iaculis diam sollicitudin. Quisque finibus auctor magna, a hendrerit lorem tincidunt ac.<br>
+	  </div>
+    </div>
+  </div>
+
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+  
 </body>
 </html>
